IM RUNNING OUT OF TIME ON THIS

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,16 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "$styles": ["styles"],
+      "$styles/*": ["styles/*"],
+      "$components": ["components"],
+      "$components/*": ["components/*"],
+      "$public": ["public"],
+      "$public/*": ["public/*"]
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
