I need to remember to commit more often.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,8 @@
       "$styles/*": ["styles/*"],
       "$components": ["components"],
       "$components/*": ["components/*"],
+      "$lib": ["lib"],
+      "$lib/*": ["lib/*"],
       "$public": ["public"],
       "$public/*": ["public/*"]
     }
